<resources>
    <string name="app_name">RS Cepat Kembali</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="doctor">Doctor</string>
    <string name="exit">Exit</string>
    <string name="specialty">Specialty</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_appointment">Add</string>
    <string name="tv_onboarding_title">RS Cepat Kembali</string>
    <string name="tv_onboarding_subtitle">It is easier to keep you up and healthy with RS Cepat Kembali app</string>
    <string name="btn_onboarding_buat_pertemuan">Make an Appointment</string>
    <string name="tv_fragment_doctor_title">Doctor List</string>
    <string name="tv_fragment_appointment_title">My Appointment</string>
    <string name="name">Name</string>
    <string name="spesialis">Specialty</string>
    <string name="btn_add_doctor">Add</string>
    <string name="doctor_add_fragment">Add Doctor</string>
    <string name="patient_name">Patient Name</string>
    <string name="issues">Issues</string>
    <string name="issues_desc">Brief description of your issues</string>
    <string name="patient_issues">Patient Issues</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="nomor_telpon">0812 3456 7890</string>
    <string name="stripe">-</string>
    <string name="tanggal">1 January 2022</string>
    <string name="jam">23:00</string>
    <string name="contact">Contact</string>
    <string name="appointment_list">Appointment</string>
    <string name="doctor_list">Doctor</string>
    <string name="patient_phone">Patient Phone</string>
    <string name="choose_a_doctor">Choose a Doctor</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="doctor_name">Doctor\'s Name</string>
    <string name="doctor_specialty">Doctor\'s Specialty</string>
    <string name="doctor_phone">Doctor\'s Phone</string>
    <string name="patient">Patient</string>
    <string name="status">Status</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="data_doctor">Doctor\'s Data</string>
    <string name="save">Save</string>
</resources>
