<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_appointment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8px"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:padding="@dimen/dp_16px">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8px">

            <TextView
                android:id="@+id/tv_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/doctor"
                android:textColor="@color/black"
                android:textSize="@dimen/h5"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dp_4px"

                android:text="@string/stripe"
                android:textSize="@dimen/h5" />

            <TextView
                android:id="@+id/tv_doctor_specialty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/specialty"
                android:textColor="@color/black"
                android:textSize="@dimen/h5" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_8px"
            android:text="@string/patient_name"
            android:textColor="@color/black"
            android:textSize="@dimen/h5"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_4px"

                android:src="@drawable/ic_baseline_calendar_today_24" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_8px"
                android:gravity="center_vertical"

                android:text="@string/tanggal"
                android:textColor="@color/black"
                android:textSize="@dimen/subtitle" />

            <ImageView
                android:id="@+id/ic_jam"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="@dimen/dp_4px"

                android:src="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"

                android:text="@string/jam"
                android:textColor="@color/black"
                android:textSize="@dimen/subtitle" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"

        android:src="@drawable/ic_baseline_delete_36" />
</LinearLayout>