<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_add_fragment"
        ></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_doctor_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:layout_weight="1"
            ></TextView>
        <EditText
            android:id="@+id/et_doctor_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:layout_weight="1"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_doctor_add_specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialty"
            android:layout_weight="1"
            ></TextView>
        <EditText
            android:id="@+id/et_doctor_add_specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/specialty"
            android:layout_weight="1"
            ></EditText>
    </LinearLayout>
    <Button
        android:id="@+id/btn_add_new_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_doctor"
        ></Button>
</LinearLayout>